--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     implementation 'com.github.smarteist:autoimageslider:1.4.0-appcompat'
     implementation 'android.arch.lifecycle:livedata:1.1.1'
     implementation 'android.arch.lifecycle:viewmodel:1.1.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
 }
