Added and Updated Files
Added EditAdvertisement.java, activity_edit_advertisement.xml, and my_listings.xml. These files are used for the "My Listing Page" and "Edit Advertisement Page".

ChangePassword.java was edited to remove a function.

Messages.java, NavigationDrawer.java, and RecyclerAdapter.java were edited to allow ad ID to be passed to EditAdvertisement.java.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".PostAd"
+            android:name=".EditAdvertisement"
+            android:label="@string/title_activity_edit_advertisement"
             android:theme="@style/AppTheme.NoActionBar.NoActionBar"></activity>
+        <activity
+            android:name=".PostAd"
+            android:theme="@style/AppTheme.NoActionBar.NoActionBar" />
         <activity android:name=".ViewDashboard" />
         <activity
             android:name=".NavigationDrawer1"
@@ -38,10 +42,7 @@
         <activity
             android:name=".ChangePassword"
             android:label="ChangePassword"
-            android:theme="@style/AppTheme.NoActionBar.NoActionBar">
-
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar.NoActionBar"></activity>
     </application>
 
 </manifest>
