--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".ViewAdvertisement"></activity>
-
-
         <activity
             android:name=".EditAdvertisement"
             android:label="@string/title_activity_edit_advertisement"
-            android:theme="@style/AppTheme.NoActionBar.NoActionBar" />
-
-
-
-
+            android:theme="@style/AppTheme.NoActionBar.NoActionBar"></activity>
         <activity
-
             android:name=".PostAd"
             android:theme="@style/AppTheme.NoActionBar.NoActionBar" />
         <activity android:name=".ViewDashboard" />
@@ -50,7 +42,7 @@
         <activity
             android:name=".ChangePassword"
             android:label="ChangePassword"
-            android:theme="@style/AppTheme.NoActionBar.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar.NoActionBar"></activity>
     </application>
 
 </manifest>
